--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Curriculum Vitae a Personal Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
+<title>Yu-Chih Tung</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -28,39 +28,39 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 <!-- header -->
 <div class="col-sm-3 col-md-2 sidebar">
-		 <div class="sidebar_top">
-			 <h1>USER NAME</h1> 
-			 <img src="images/avt.png" alt=""/>
-		 </div>
+		<div class="sidebar_top">
+			<h1>Yu-Chih Tung</h1>
+			<img src="images/profile_2015_small.png" alt=""/>
+		</div>
 		<div class="details">
-			 <h3>PHONE</h3>
-			 <p>+00 234 56 789</p>  	 
-			 <h3>EMAIL</h3>
-			<p><a href="mailto:info@example.com">mail@example.com</a></p>
-			 <address>
-			 <h3>ADDRESS</h3>
-			 <span>Lorem ipsum,</span>
-			 <span>Sed dolor sit,</span>
-			 <span>Praesent porta.</span>
-			 </address>
-			 
+			<h3>DEGREE</h3>
+			<p>CS PhD</p>  	 
+			<h3>EMAIL</h3>
+			<p>yctung[at]umich.edu</p>
+			<h3>
+			<!--
+			<address>
+			<h3>ADDRESS</h3>
+			<span>Lorem ipsum,</span>
+			<span>Sed dolor sit,</span>
+			<span>Praesent porta.</span>
+			</address> 
+			-->
 		</div>
 		<div class="clearfix"></div>
 </div>
-<!---->
 <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
 <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
-	<!---//pop-up-box---->			
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 	 <div class="content">
 		 <div class="details_header">
 			 <ul>
 				 <li><a href="index.html"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Resume</a></li>
-				 <li><a href="#"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>Print CV</a></li>
-				 <li><a href="contact.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email me</a></li>
+				 <li><a href="#"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Project</a></li>
+				 <li><a href="contact.html"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>CV</a></li>
 				 <li><a class="play-icon popup-with-zoom-anim" href="#small-dialog"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>View photo</a></li>
 				 <div id="small-dialog" class="mfp-hide">
-					 <img src="images/g4.jpg" alt=""/>
+					 <img src="images/profile_2015_mid.jpg" alt=""/>
 				 </div>
 				 <script>
 						$(document).ready(function() {
@@ -147,6 +147,5 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div>
 	 </div>
 </div>
-<!---->
 </body>
 </html>
