fix the responsive design issue

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 <!-- header -->
 <div class="col-sm-3 col-md-2 sidebar">
-		<div class="sidebar_top">
+		<div class="sidebar_name">
 			<h1>Yu-Chih Tung</h1>
+		</div>
+		<div class="sidebar_top">
 			<img src="images/profile_2015_small.png" alt=""/>
 		</div>
 		<div class="details">
+			<h1>Yu-Chih Tung</h1>
 			<h3>DEGREE</h3>
 			<p>CS PhD</p>  	 
 			<h3>EMAIL</h3>
