fnish draft of all profiles

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="details">
 			<h1>Yu-Chih Tung</h1>
 			<h3>DEGREE</h3>
-			<p>CS PhD</p>  	 
+			<p>CSE PhD at UMich</p>
 			<h3>EMAIL</h3>
-			<p>yctung[at]umich.edu</p>
+			<p>yctung@umich.edu</p>
 			<h3>
 			<!--
 			<address>
@@ -90,7 +90,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="box">
 			<h3 class="clr1">About Me</h3>
 			<div class="box_details">
-				<p align="justify"> <strong>Tung Yu-Chih</strong> received the B.S. degree of Computer Science in National Chiao Tung University at 2009, and the M.S. degree of Computer Science in National Taiwan University at 2012. Yu-Chih used to work as a Research Assistant with <a href="http://nms.citi.sinica.edu.tw/katelin/index.html" target="_blank">Dr. Kate Ching-Ju Lin</a> in CITI, Academia Sinica and as a student intern in <a href="http://groups.csail.mit.edu/netmit/wordpress/" target="_blank">NETMIT</a>, CSAIL, MIT in 2011. After Yu-Chih finished military service, he started pursuing the Ph.D. degree of Computer Science in University of Michigan-Ann Arbor, advised by <a href="http://web.eecs.umich.edu/~kgshin/" target="_blank">Prof. Kang G. Shin</a>. His current research intrest is mobile applications or security issues based on physical layer signal processing.
+				<p align="justify">
+                    <strong>Tung Yu-Chih</strong> is a CS PhD candidate at University of Michigan-Ann Arbor, advised by <a href="http://web.eecs.umich.edu/~kgshin/" target="_blank">Prof. Kang G. Shin</a>.
+                    His research intrest is building mobile applications or security systems based on physical-layer signal processing.
+                    Yu-Chih received M.S. from National Taiwan University at 2012. He used to work as a research assistant (intern) at HP Labs with the <a href="http://www.hpl.hp.com/research/networking_mobility.html" target="_blank">Mobility team</a>, CSAIL MIT with Prof. <a href="http://groups.csail.mit.edu/netmit/wordpress/" target="_blank">Dina Katabi</a>, and CITI Academia Sinica with <a href="http://nms.citi.sinica.edu.tw/katelin/index.html" target="_blank">Dr. Kate Ching-Ju Lin</a>.
+                    His current work has been published at top-ranked conferences such as ACM MobiCom or ACM CCS and under the process of being commercialized.
 				</p>
 			</div>
 		</div>
@@ -118,15 +122,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 
 		<div class="box">
-			<h3 class="clr1">Interests & Skills</h2>
+			<h3 class="clr1">Interests and Skills</h2>
+                
+            <!--
 			<div class="box_details">
-				
+                <h4>Application Development</h4>
+                <p align="justify">
+                When I join the networking group in CITI and MIT, I learned the skill to implement wireless protocol and signal processing at embedded systems. For example, I know how to modify TCP protocols in NS2 to emulate the system performance of large networks and also know how to modulate bits into wireless signal and send those signals via software-defined radios, such as WARP or USRP. I also know some technique to modify wireless firmware to build customized systems at commercial APs.
+                </p>
+                <h6><b>Used skills: </b>Linux/802.11/C/Python/Matlab</h6>
+
+                <h4>Wireless Protocol and Transmission</h4>
+                <p align="justify">
+                    When I join the networking group in CITI and MIT, I learned the skill to implement wireless protocol and signal processing at embedded systems. For example, I know how to modify TCP protocols in NS2 to emulate the system performance of large networks and also know how to modulate bits into wireless signal and send those signals via software-defined radios, such as WARP or USRP. I also know some technique to modify wireless firmware to build customized systems at commercial APs.
+                </p>
+                <h6><b>Used skills: </b>Linux/802.11/C/Python/Matlab</h6>
+			</div>
+             -->
+
+			<div class="box_details">
+                Here list my reserch interests and the skills frequently used to build my projects. I acquired the knowledge to deal with wireless protocols and its physical-layer transmissions during the internship at MIT. I knew how to emulate those technologies and implement them  by soft-defined radios or other embedded systems. I utilzied socket programming extensively in most of my projects, ranged from integrating java networking library into Matlab or streaming data via raw sockets in C. I latter transfered my wireless background to the audio signal processing and built several userful applications at android/iOS. Most of my projects include application development since I am happy to see how people test my prototypes.
 			</div>
 			<div class="box_lists">
 				<div class="box_list1">
 					<h4>Interests</h4>
 					<ul>					 
-						<li>Mobioe Computing</li>
+						<li>Mobile Computing</li>
 						<li>Internet of Things</li>
 						<li>Wireless Networks</li>
 						<li>System Optimizations</li>
@@ -153,30 +174,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="box_details">
 				<h4>EchoTag<span>09/2015</span></h4>
 				<p align="justify">
-				EchoTag enables commodity phones to tag and remember indoor locations without requiring any additional sensors or pre-installed infrastructure. The main idea behind EchoTag is to actively generate acoustic signatures by transmitting a inaudible sound signal with a phone’s speakers and sensing its reflections with the phone’s microphones.
+				EchoTag enables commodity phones to tag and remember indoor locations without requiring any additional sensor or pre-installed infrastructure. The main idea behind EchoTag is to actively generate acoustic signatures by transmitting a inaudible sound signal with a phone’s speakers and sensing its reflections with the phone’s microphones.
 				</p>
 				<h6><b>My Role: </b>Implementing the system at Android by integrating audio signal processing and Java/JNI/Matlab/LibSVM</h6>
 			</div>
 
 			<div class="box_details">
-				<h4>CSISec<span>05/2015</span></h4>
-				<h6>WEB DESIGNER</h6>
+				<h4>CSISec<span>05/2014</span></h4>
 				<p align="justify">
-				CSISec is a novel security system that ensure no leakage of channel state information (CSI) in wireless networks. CSISec utiliies the similar technology of zero-knowledge proof and signal cancellation to 
-
+				A novel security system that ensures no leakage of channel state information (CSI) in wireless networks. CSISec utiliies the similar technology of zero-knowledge proof and signal cancellation to secure the transmission without modifying cleint devices (such as mobile phones).
 				</p>
+                <h6><b>My Role: </b>Discovering this potential vunlearbility and implementing the system in WARP embedded testbeds</h6>
 			</div>
 
 			<div class="box_details">
-				<h4>TurboRate<span>XXX</span></h4>
+				<h4>TurboRate<span>09/2012</span></h4>
 				<h6></h6>
 				<p align="justify">
-				A rate adaptation protocol solves the packet collision issue in Multi-user MIMO networks. Implementation and evaluation validate 1.7x and 2.3x throughput gains for 2-antenna and 3-antenna AP scenario respectively. This project is accepted by Mobicom 2012.
+				A rate adaptation protocol solves the packet collision issue in Multi-user MIMO networks. Implementation and evaluation validate 1.7x and 2.3x throughput gains for 2-antenna and 3-antenna AP scenario respectively. This project is nomiated as one of three best paper candidates in ACM MobiCom 2012.
 				</p>
+                <h6><b>My Role: </b>Implementing and testing the proposed wireless protocols in USRP embeded testbeds</h6>
 			</div>
 
 			<div class="box_details">
-				<h4>Labor's Right App<span>XXX</span></h4>
+				<h4>Labor Rights App<span>10/2011</span></h4>
 				<p align="justify">
 				Kingfong (Labor Law Console) is a mobile application written for all employees and employers in Taiwan/China to know their rights and calculate what they should get, such as pension and overwork payment. It also provides console function to post questions which will be replied by Kingfong cooperation.
 				</p>
@@ -216,83 +237,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 
-		<div class="box">
-			<h3 class="clr1">Education</h3>
-			<div class="box_details">
-				<ul class="content-list">
-					<li>PhD in CSE, UMich (ongoing), GPA 4.00</li>
-					<li>M.S. in CSIE, NTU 2010~2012, GPA 3.90</li>
-					<li>B.S. in CSIE, NCTU 2006~2010, GPA 3.95</li>
-				</ul>		
-			</div>
-		</div>
-
-		<div class="company">
-			 <h3 class="clr1">Previous Employment</h3>
-			 <div class="company_details">
-				 <h4>Company Name <span>JUNE 2009 - PRESENT</span></h4>
-				 <h6>WEB DESIGNER</h6>
-				 <p class="cmpny1">Nulla volutpat at est sed ultricies. In ac sem consequat, posuere nulla varius, molestie lorem. Duis quis nibh leo.
-				 Curabitur a quam eu mi convallis auctor nec id mauris. Nullam mattis turpis eu turpis tincidunt, et pellentesque leo imperdiet.
-				 Vivamus malesuada, sem laoreet dictum pulvinar, orci lectus rhoncus sapien, ut consectetur augue nibh in neque. In tincidunt sed enim et tincidunt.</p>
-			 </div>
-			 <div class="company_details">
-				 <h4>Company Name <span>NOVEMBER 2007 - MAY 2009</span></h4>
-				 <h6>WEB DESIGNER</h6>
-				 <p>Nulla volutpat at est sed ultricies. In ac sem consequat, posuere nulla varius, molestie lorem. Duis quis nibh leo.
-				 Curabitur a quam eu mi convallis auctor nec id mauris. Nullam mattis turpis eu turpis tincidunt, et pellentesque leo imperdiet.
-				 Vivamus malesuada, sem laoreet dictum pulvinar, orci lectus rhoncus sapien, ut consectetur augue nibh in neque. In tincidunt sed enim et tincidunt.</p>
-			 </div>
-		 </div>
-		 <div class="skills">
-			 <h3 class="clr2">Professional skills</h3>
-			 <div class="skill_info">
-			 <p>Duis egestas tortor metus, vitae venenatis tortor tristique at. Pellentesque dignissim purus vitae enim blandit, sed tristique enim malesuada. Maecenas dolor erat,
-			 volutpat a tellus eu, euismod iaculis urna. Nulla dui purus, viverra viverra dolor non, malesuada dictum purus.</p>
-			 </div>
-			 <div class="skill_list">
-				 <div class="skill1">
-					 <h4>Software</h4>
-					 <ul>					 
-						<li>Photoshop</li>
-						<li>Flash</li>
-						<li> Dreamweaver</li>
-						<li>In Design</li>
-					 </ul>
-				 </div>
-				 <div class="skill2">
-					 <h4>Languages</h4>
-					 <ul>					 
-						<li>HTML/CSS</li>
-						<li>ActionScript</li>
-						<li>PHP</li>
-						<li>Ruby on Rails</li>
-					 </ul>
-				 </div>
-				 <div class="clearfix"></div>
-			 </div>
-		 </div>
-		 <div class="education">
-			 <h3 class="clr3">Education</h3>
-			 <div class="education_details">
-				 <h4>University of Awesome<span>JANUARY 2004 - OCTOBER 2009</span></h4>
-				 <h6>MAJOR PHD</h6>
-				 <p class="cmpny1">Nulla volutpat at est sed ultricies. In ac sem consequat, posuere nulla varius, molestie lorem. Duis quis nibh leo.
-				 Curabitur a quam eu mi convallis auctor nec id mauris. Nullam mattis turpis eu turpis tincidunt, et pellentesque leo imperdiet.
-				 Vivamus malesuada, sem laoreet dictum pulvinar, orci lectus rhoncus sapien, ut consectetur augue nibh in neque. In tincidunt sed enim et tincidunt.</p>
-			 </div>
-			 <div class="education_details">
-				 <h4>University of Technology, Newyork <span>APRIL 2001 - SEPTEMBER 2003</span></h4>
-				 <h6>BACHELORS OF ARTS</h6>
-				 <p>Nulla volutpat at est sed ultricies. In ac sem consequat, posuere nulla varius, molestie lorem. Duis quis nibh leo.
-				 Curabitur a quam eu mi convallis auctor nec id mauris. Nullam mattis turpis eu turpis tincidunt, et pellentesque leo imperdiet.
-				 Vivamus malesuada, sem laoreet dictum pulvinar, orci lectus rhoncus sapien, ut consectetur augue nibh in neque. In tincidunt sed enim et tincidunt.</p>
-			 </div>
-		 </div>
-		 <div class="copywrite">
-			 <p>© 2015 Curriculum Vitae, Originally Design by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
-		 </div>
-	 </div>
 </div>
 </body>
 </html>
