--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 <div class="content">
 		 <div class="details_header">
 			 <ul>
-				 <li><a href="index.html"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Home</a></li>
 				 <li><a href="#project"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>Project</a></li>
+				 <li><a href="#publication"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>Publication</a></li>
 				 <li><a href="files/cv/CV_ver18.pdf" target="_blank"><span class="glyphicon glyphicon-print" aria-hidden="true"></span>CV</a></li>
 
 			<!-- yctung: image popup is not responsive -> solve this issue latter
@@ -206,6 +206,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 
 		<div class="box">
+			<a name="publication"></a> 
 			<h3 class="clr1">Publications</h3>
 			<div class="box_details">
 				<ul class="content-list">
