--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 
 		<div class="box">
-			<a name="publication"></a> 
+			<a name="publication"></a>
 			<h3 class="clr1">Publications</h3>
 			<div class="box_details">
 				<ul class="content-list">
@@ -219,7 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="http://kabru.eecs.umich.edu/papers/publications/2014/paper-ccs.pdf" target="_blank">Vulnerability and Protection of Channel State Information in Multiuser MIMO Networks</a></li>
 					<div class="author-list"><u>Y.C. Tung</u>, S. Han, D. Chen, and K.G. Shin</div>
 					<div class="conference">ACM CCS, 2014 <a href="https://kabru.eecs.umich.edu/papers/misc/ccs14_slide.swf" target="_blank">[Animated slide]</a> <a href="https://youtu.be/voqRcT8l6SY" target="_blank">[Presentation video]</a></div>
-					<li><a href="data/publication/mobicom12-turborate.pdf" target="_blank">Rate Adaptation for 802.11 Multiuser MIMO Networks</a></li>
+					<li><a href="files/publication/mobicom12-turborate.pdf" target="_blank">Rate Adaptation for 802.11 Multiuser MIMO Networks</a></li>
 					<div class="author-list">W.L. Shen, <u>Y.C. Tung</u>, K.C. Lee, K. C.J. Lin, S. Gollakota, D. Katabi and M.S. Chen</div>
 					<div class="conference">ACM Mobicom, 2012 (Best Paper Nomination)</div>
 
@@ -227,16 +227,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="author-list"><u>Yu-Chih Tung</u>, C,F. Chou, K.C.J. Lin</div>
 					<div class="conference">Master Thesis, 2012</div>
 
-					<li><a href="data/publication/globecom11-p2pstorage.pdf" target="_blank">Bandwidth.Aware Replica Placement for Peer.to.Peer Storage Systems</a></li>
+					<li><a href="files/publication/globecom11-p2pstorage.pdf" target="_blank">Bandwidth.Aware Replica Placement for Peer.to.Peer Storage Systems</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u>, K.C.J. Lin, C.F. Chou</div>
 					<div class="conference">IEEE Globecom, 2011</div>
 					
-					<li><a href="data/publication/percom10-adhoc.pdf" target="_blank">Location-Assisted Energy-Efficient Content Search for Mobile Peer-to-Peer Networks</a></li>
+					<li><a href="files/publication/percom10-adhoc.pdf" target="_blank">Location-Assisted Energy-Efficient Content Search for Mobile Peer-to-Peer Networks</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u>, K.C.J. Lin</div>
 					<div class="conference">IEEE PERCOM Workshops, 2011</div>
 				</ul>
 			</div>
 		</div>
+        
+		<div class="box">
+            <h3 class="clr1">Honors and Awards</h3>
+            <div class="box_details">
+                <ul class="content-list">
+                <li>Rackham International Student Fellowship, 2014</li>
+                <li>Best Paper Nomination, ACM MOBICOM, 2012</li>
+                <li>Graduated First Place from CSIE, National Chiao Tung University, 2010</li>
+                <li>College Student Research Fellowship from National Science Council, Taiwan, 2010</li>
+                <li>Leader of StarVoice (University Rock Music Club) composed by 100 members, 2009</li>
+                <li>Scholarship from Taiwan Dao De Zong Huei Institute, 2007</li>
+                </ul>
+            </div>
+        </div>
 
 </div>
 </body>
