tune the offset of project items

--- a/index.html
+++ b/index.html
@@ -171,6 +171,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="box">
 			<a name="project"></a> 
 			<h3 class="clr1">Selected Projects</h3>
+			
+			<div class="box_details">
+				<h4>ForcePhone<span>04/2016</span></h4>
+				<p align="justify">
+				ForcePhones is a software-based solution to enable the force-sensing functionality in commodity phones. This technology novelly uses the structure-borne sound propagration to estimate touch forces. Our test has shown it can provide comparable performance as the state-of-art Apple 3D Touch for accomplishing simple tasks like hard-pressing a button. We have implemented the prototype on iOS and Android platforms. Since ForcePhone only uses the built-in hardware, it can be easily extended to other platforms.</p>
+				<h6><b>My Role: </b>Designing and implementing the system at iOS/Android by Java/Objective-C/JNI/Matlab</h6>
+			</div>
+
 			<div class="box_details">
 				<h4>EchoTag<span>09/2015</span></h4>
 				<p align="justify">
@@ -189,7 +197,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			<div class="box_details">
 				<h4>TurboRate<span>09/2012</span></h4>
-				<h6></h6>
 				<p align="justify">
 				A rate adaptation protocol solves the packet collision issue in Multi-user MIMO networks. Implementation and evaluation validate 1.7x and 2.3x throughput gains for 2-antenna and 3-antenna AP scenario respectively. This project is nomiated as one of three best paper candidates in ACM MobiCom 2012.
 				</p>
