update the slide

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="box_details">
 				<ul class="content-list">
 					<li><a href="files/publication/mobisys16-forcephone.pdf" target="_blank">Expansion of Human–Phone Interface By Sensing Structure-Borne Sound Propagation</a></li>
-					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin</div>
+					<div class="author-list"><u>Yu-Chih Tung</u> and Kang G. Shin <a href="files/slide/mobisys16_forcephone.swf" target="_blank">[Animated slide]</a> </div>
 					<div class="conference">ACM Mobisys, 2016 (acc. rate: 16%)</div>
 					
 					<li><a href="files/publication/mobihoc16-amitm.pdf" target="_blank">Analog Man-in-the-Middle Attack Against Link-Based Packet Source Identification</a></li>
