--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="box_details">
 				<p align="justify">
                     <b>Tung Yu-Chih</b> is a CS PhD candidate at University of Michigan-Ann Arbor, advised by <a href="http://web.eecs.umich.edu/~kgshin/" target="_blank">Prof. Kang G. Shin</a>.
-                    His research intrest is building mobile applications or security systems based on physical-layer signal processing.
+                    His research intrest is building mobile applications and security systems based on physical-layer signal processing.
                     Yu-Chih received M.S. from National Taiwan University at 2012. He used to work as a research assistant (intern) at HP Labs with the <a href="http://www.hpl.hp.com/research/networking_mobility.html" target="_blank">Mobility team</a>, CSAIL MIT with Prof. <a href="http://groups.csail.mit.edu/netmit/wordpress/" target="_blank">Dina Katabi</a>, and CITI Academia Sinica with <a href="http://nms.citi.sinica.edu.tw/katelin/index.html" target="_blank">Dr. Kate Ching-Ju Lin</a>.
-                    His current work has been published at top-ranked conferences such as ACM MobiCom or ACM CCS and under the process of being commercialized.
+                    His current work has been published at top-ranked conferences such as ACM MobiCom/Mobisys/CCS and under the process of being commercialized.
 				</p>
 			</div>
 		</div>
@@ -127,24 +127,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="box">
 			<h3 class="clr1">Interests and Skills</h2>
                 
-            <!--
 			<div class="box_details">
-                <h4>Application Development</h4>
-                <p align="justify">
-                When I join the networking group in CITI and MIT, I learned the skill to implement wireless protocol and signal processing at embedded systems. For example, I know how to modify TCP protocols in NS2 to emulate the system performance of large networks and also know how to modulate bits into wireless signal and send those signals via software-defined radios, such as WARP or USRP. I also know some technique to modify wireless firmware to build customized systems at commercial APs.
-                </p>
-                <h6><b>Used skills: </b>Linux/802.11/C/Python/Matlab</h6>
-
-                <h4>Wireless Protocol and Transmission</h4>
-                <p align="justify">
-                    When I join the networking group in CITI and MIT, I learned the skill to implement wireless protocol and signal processing at embedded systems. For example, I know how to modify TCP protocols in NS2 to emulate the system performance of large networks and also know how to modulate bits into wireless signal and send those signals via software-defined radios, such as WARP or USRP. I also know some technique to modify wireless firmware to build customized systems at commercial APs.
-                </p>
-                <h6><b>Used skills: </b>Linux/802.11/C/Python/Matlab</h6>
-			</div>
-             -->
-
-			<div class="box_details">
-                Here list my reserch interests and the skills frequently used to build my projects. I acquired the knowledge to deal with wireless protocols and its physical-layer transmissions during the internship at MIT. I knew how to emulate those technologies and implement them  by soft-defined radios or other embedded systems. I utilzied socket programming extensively in most of my projects, ranged from integrating java networking library into Matlab or streaming data via raw sockets in C. I latter transfered my wireless background to the audio signal processing and built several userful applications at android/iOS. Most of my projects include application development since I am happy to see how people test my prototypes.
+                I acquired the knowledge to deal with wireless protocols and its physical-layer transmissions during the internship at MIT. I knew how to emulate those technologies and implement them by soft-defined radios. I utilzied socket programming extensively in most of my projects, ranged from integrating java networking library into Matlab or streaming data via raw sockets in C. I latter transfered my wireless background to the audio signal processing and built several userful applications at android/iOS. Most of my projects include application development since I am happy to see how people interact with my prototypes.
 			</div>
 			<div class="box_lists">
 				<div class="box_list1">
@@ -160,7 +144,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 <h4>Skills</h4>
 					 <ul>					 
 						<li>C/C++/Java/Python/Matlab</li>
-						<li>Apps Developments</li>
+						<li>App Developments</li>
 						<li>Socket Programming</li>
 						<li>Corss-layer Optimizations</li>
 					 </ul>
@@ -209,7 +193,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="box_details">
 				<h4>Labor Rights App<span>10/2011</span></h4>
 				<p align="justify">
-				Kingfong (Labor Law Console) is a mobile application written for all employees and employers in Taiwan/China to know their rights and calculate what they should get, such as pension and overwork payment. It also provides console function to post questions which will be replied by Kingfong cooperation.
+				Kingfong (Labor Law Console) is a mobile application written for all employees and employers in Taiwan/China to know their rights and calculate what they should get, such as pension and overwork payment. It also provides the console function to post questions and get professional advice.
 				</p>
 				<h6><b>My Role: </b>Designing the system model and user interface in Java and Objective-C</h6>
 			</div>
@@ -262,7 +246,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <ul class="content-list">
                 <li>ACM Mobisys/MobiCom/MobiHoc Travel Grants, 2016</li>
                 <li>Rackham International Student Fellowship, 2014</li>
-                <li>Best Paper Nomination, ACM MOBICOM, 2012</li>
+                <li>Best Paper Nomination, ACM MobiCom, 2012</li>
                 <li>Graduated First Place from CSIE, National Chiao Tung University, 2010</li>
                 <li>College Student Research Fellowship from National Science Council, Taiwan, 2010</li>
                 <li>Leader of StarVoice (University Rock Music Club) composed by 100 members, 2009</li>
