fix typo and format

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="box">
 			<h3 class="clr1">Interests and Skills</h2>
                 
-			<div class="box_details">
+			<div class="box_details" align="justify">
                 I acquired the knowledge to deal with wireless protocols and its physical-layer transmissions during the internship at MIT. I knew how to emulate those technologies and implement them by soft-defined radios. I utilzied socket programming extensively in most of my projects, ranged from integrating java networking library into Matlab or streaming data via raw sockets in C. I latter transfered my wireless background to the audio signal processing and built several userful applications at android/iOS. Most of my projects include application development since I am happy to see how people interact with my prototypes.
 			</div>
 			<div class="box_lists">
@@ -229,7 +229,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="author-list"><u>Yu-Chih Tung</u>, C,F. Chou, K.C.J. Lin</div>
 					<div class="conference">Master Thesis, 2012</div>
 
-					<li><a href="files/publication/globecom11-p2pstorage.pdf" target="_blank">Bandwidth.Aware Replica Placement for Peer.to.Peer Storage Systems</a></li>
+					<li><a href="files/publication/globecom11-p2pstorage.pdf" target="_blank">Bandwidth.Aware Replica Placement for Peer-to-Peer Storage Systems</a></li>
 					<div class="author-list"><u>Yu-Chih Tung</u>, K.C.J. Lin, C.F. Chou</div>
 					<div class="conference">IEEE Globecom, 2011</div>
 					
